# portable-devshell

./: .editorconfig  .gitignore  .prettierignore  ACCEPTANCE.md  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.test.json  tsconfig.typecheck.json
crates/devshell-worker/: Cargo.toml
crates/devshell-worker/src/: main.rs
crates/devshell-worker/src/cli/: enroll.rs  gc.rs  logs.rs  mod.rs  rpc.rs  start.rs  status.rs  stop.rs
crates/devshell-worker/src/daemon/: log_writer.rs  mod.rs  process.rs  process_registry.rs  readiness.rs  server.rs  shutdown.rs
crates/devshell-worker/src/instance/: config.rs  lock.rs  lock_unix.rs  lock_windows.rs  mod.rs  name.rs
crates/devshell-worker/src/platform/: environment.rs  mod.rs  path.rs  unix.rs  windows.rs
crates/devshell-worker/src/reverse/: connector.rs  enroll.rs  install.rs  install_unix.rs  install_windows.rs  mod.rs
crates/devshell-worker/src/rpc/: bridge.rs  codec.rs  error.rs  mod.rs  request.rs  response.rs  router.rs
crates/devshell-worker/src/rpc/control/: artifact_payload.rs  file_session.rs  handshake.rs  mod.rs  ping.rs  status.rs  stop.rs  tool_call.rs  tool_session.rs  tools_list.rs
crates/devshell-worker/src/security/: mod.rs  policy.rs
crates/devshell-worker/src/security/path/: capability.rs  mod.rs  resolution.rs  syntax.rs  syntax_unix.rs  syntax_windows.rs
crates/devshell-worker/src/socket/: ipc.rs  ipc_unix.rs  ipc_windows.rs  mod.rs  worker_socket.rs  xdg_runtime_dir.rs
crates/devshell-worker/src/storage/: config_path.rs  devshell_home.rs  home_unix.rs  home_windows.rs  instance_dir.rs  mod.rs  permissions.rs  permissions_unix.rs  permissions_windows.rs
crates/devshell-worker/src/tools/: catalog.rs  contract.rs  error.rs  mod.rs  name.rs  registry.rs
crates/devshell-worker/src/tools/artifact/: mod.rs  payload.rs  read.rs  receive.rs  storage.rs  store.rs  types.rs
crates/devshell-worker/src/tools/bash/: backend.rs  backend_unix.rs  backend_windows.rs  group.rs  mod.rs  run.rs  runtime.rs  types.rs
crates/devshell-worker/src/tools/file/: codex_patch.rs  context_patch.rs  cursor.rs  diff.rs  discover.rs  edit.rs  find.rs  info.rs  legacy_edit.rs  mod.rs  read.rs  (+6 more)
crates/devshell-worker/tests/: file_tools_contract.rs  file_tools_v2_contract.rs  tmux_tools_contract.rs  worker_contract.rs
crates/devshell-worker/tests/legacy/: file_tools_contract.rs
crates/devshell-worker/tests/support/: mod.rs
(+91 files in other folders)
