[package]
name = "devshell-worker"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
