[package]
name = "devshell-worker"
version = "0.2.3"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.3", features = ["pure"] }
clap = { version = "4.5.41", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.23"
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }
regex = "1.12.2"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
toml = "0.8.23"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.1.1"
