[package]
name = "devshell-worker"
version = "0.4.8"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blake3 = { version = "1.8.3", features = ["pure"] }
clap = { version = "4.5.41", features = ["derive"] }
diffy = { version = "0.5.0", features = ["std"] }
filetime = "0.2.29"
globset = "0.4.18"
ignore = "0.4.23"
lru = "0.16.3"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
tar = "0.4.44"
tempfile = "3.23.0"
toml = "0.8.23"
tree-sitter = "0.26.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-md = { version = "0.5.3", features = ["parser"] }
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2.5"
zstd = "0.13.3"
uuid = { version = "1.23.0", features = ["v4"] }


[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading"
] }
[dev-dependencies]
assert_cmd = "2.1.1"
